refactor: Book & Chapter to MySQL