@@ -7,54 +7,154 @@ import co.elastic.clients.elasticsearch.core.search.Hit;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.ssafy.respring.domain.book.repository.BookInfoRepository;
+import org.ssafy.respring.domain.book.repository.MongoBookRepository;
 import org.ssafy.respring.domain.book.vo.Book;
 import org.ssafy.respring.domain.book.dto.response.BookResponseDto;
 import org.ssafy.respring.domain.book.util.BookMapper;
-import org.ssafy.respring.domain.story.repository.StoryRepository;
-
 import java.io.IOException;
-import java.util.*;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Objects;
+import java.util.UUID;
 import java.util.stream.Collectors;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.PageRequest;
+import org.ssafy.respring.domain.book.vo.BookInfo;
 
 @Service
 @RequiredArgsConstructor
 public class BookSearchService {
     private final ElasticsearchClient esClient;
     private final BookMapper bookMapper;
+    private final MongoBookRepository bookRepository;
     private final BookInfoRepository bookInfoRepository;
-    private final StoryRepository storyRepository;
 
-    public List<BookResponseDto> searchByTitle(String keyword, UUID userId) throws IOException {
-        // Elasticsearch 검색 요청
+    public List<BookResponseDto> searchByTitle(String keyword) throws IOException {
         SearchRequest searchRequest = SearchRequest.of(s -> s
-          .index("books")
-          .query(q -> q.match(m -> m.field("title").query(keyword)))
-        );
+                .index("books")
+                .query(q -> q.match(m -> m.field("title").query(keyword))));
         SearchResponse<Book> response = esClient.search(searchRequest, Book.class);
 
-        // 검색된 책 목록
-        List<Book> books = response.hits().hits().stream()
-          .map(Hit::source)
-          .filter(Objects::nonNull)
-          .collect(Collectors.toList());
+        return response.hits().hits().stream()
+                .map(Hit::source)
+                .filter(Objects::nonNull)
+                .map(book -> bookMapper.toResponseDto(
+                        null, // No user ID required for search results
+                        book,
+                        null, // No BookInfo available in search results
+                        false, // Like status unknown
+                        List.of(), // No comments needed
+                        List.of() // No image URLs needed
+                ))
+                .collect(Collectors.toList());
+    }
 
-        // ✅ 검색된 bookId 목록
-        List<String> bookIds = books.stream().map(Book::getId).toList();
+    public List<BookResponseDto> getAllBooks() {
+        Sort sort = Sort.by(Sort.Order.desc("likeCount"));
+        return bookRepository.findAll(sort).stream()
+                .map(bookMapper::toResponseDto)
+                .collect(Collectors.toList());
+    }
 
-        // ✅ 로그인한 경우 좋아요 정보 조회
-        Set<String> likedBookIds = userId != null
-          ? new HashSet<>(bookInfoRepository.findLikedBookIdsByUser(userId, bookIds))
-          : Set.of();
+//    public List<BookResponseDto> getAllBooks(UUID userId) {
+//        Sort sort = Sort.by(Sort.Order.desc("likeCount")); // 좋아요 내림차순 정렬
+//
+//        return bookRepository.findAll(sort)
+//                .stream()
+//                .map(book -> {
+//                    BookInfo bookInfo = getBookInfoByBookId(book.getId());
+//                    return getBookResponse(book.getUserId(), book, bookInfo);
+//                })
+//                .collect(Collectors.toList());
+//    }
 
-        return books.stream()
-          .map(book -> bookMapper.toResponseDto(
-            userId,
-            book,
-            null,  // ✅ BookInfo는 검색 결과에서 조회하지 않음
-            likedBookIds.contains(book.getId()),  // ✅ 좋아요 여부 포함
-            List.of(), // 댓글 정보 필요 없음
-            List.of()  // 내용 속 이미지 필요 없음
-          ))
-          .collect(Collectors.toList());
+    public List<BookResponseDto> getBooksByUser(UUID userId) {
+        return bookRepository.findByUserId(userId).stream()
+                .map(bookMapper::toResponseDto)
+                .collect(Collectors.toList());
+    }
+
+//    public List<BookResponseDto> getBooksByUser(UUID userId) {
+//        return bookRepository.findByUserId(userId)
+//                .stream()
+//                .map(book -> {
+//                    BookInfo bookInfo = getBookInfoByBookId(book.getId());
+//                    return getBookResponse(userId, book, bookInfo);
+//                })
+//                .collect(Collectors.toList());
+//    }
+
+    public  List<BookResponseDto> getBooksSorted(List<String> sortFields, List<String> directions) {
+        Sort sort = buildSort(sortFields, directions);
+        return bookRepository.findAll(sort).stream()
+                .map(book -> {
+                    BookInfo bookInfo = getBookInfoByBookId(book.getId());
+                    return getBookResponse(book.getUserId(), book, bookInfo);
+                })
+                .collect(Collectors.toList());
+    }
+
+    private Sort buildSort(List<String> sortFields, List<String> directions) {
+        if (sortFields == null || sortFields.isEmpty()) {
+            return Sort.unsorted();
+        }
+
+        Sort sort = Sort.unsorted();
+        for (int i = 0; i < sortFields.size(); i++) {
+            String field = sortFields.get(i);
+            Sort.Direction direction = (i < directions.size() && "desc".equalsIgnoreCase(directions.get(i)))
+                    ? Sort.Direction.DESC
+                    : Sort.Direction.ASC;
+            sort = sort.and(Sort.by(direction, field));
+        }
+
+        return sort;
+    }
+
+
+
+    public List<BookResponseDto> getWeeklyTop3() {
+        LocalDateTime oneWeekAgo = LocalDateTime.now().minusWeeks(1);
+        Pageable pageable = PageRequest.of(0, 3, Sort.by(
+                Sort.Order.desc("likeCount"),
+                Sort.Order.desc("viewCount"),
+                Sort.Order.desc("createdAt")
+        ));
+
+        return bookRepository.findTop3ByCreatedAtAfter(oneWeekAgo, pageable)
+                .stream()
+                .map(bookMapper::toResponseDto)
+                .collect(Collectors.toList());
+    }
+
+//    public List<BookResponseDto> getWeeklyTop3() {
+//        LocalDateTime oneWeekAgo = LocalDateTime.now().minusWeeks(1);
+//
+//        Pageable pageable = PageRequest.of(0, 3, Sort.by(
+//                Sort.Order.desc("likeCount"),  // 1순위: 좋아요 많은 순
+//                Sort.Order.desc("viewCount"),   // 2순위: 조회수 많은 순
+//                Sort.Order.desc("createdAt") // 3순위: 최신순 (동일한 경우)
+//        ));
+//
+//        return bookRepository.findTop3ByCreatedAtAfter(oneWeekAgo, pageable)
+//                .stream()
+//                .map(book -> {
+//                    BookInfo bookInfo = getBookInfoByBookId(book.getId());
+//                    return getBookResponse(book.getUserId(), book, bookInfo);
+//                })
+//                .collect(Collectors.toList());
+//    }
+
+
+    private BookInfo getBookInfoByBookId(String bookId, UUID userId) {
+        return bookInfoRepository.findByBookId(bookId)
+                .orElseThrow(() -> new IllegalArgumentException("⚠️ 잘못된 Book Id입니다!"));
+    }
+
+    private void validateOwner(UUID correctId, UUID userId) {
+        if (!correctId.equals(userId)) {
+            throw new IllegalArgumentException("❌ 접근 권한이 없습니다!");
+        }
     }
 }
